Fixed demo. Release ready.

--- a/demo.html
+++ b/demo.html
@@ -4,19 +4,22 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>lp-ugettext Demo</title>
 
-  <script src="../webcomponentsjs/webcomponents.min.js"></script>
+  <script src="../bower_components//webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="lp-ugettext.html">
 
 </head>
 <body unresolved>
+
 		<div id="mylanguage"></div>
 
       <lp-ugettext></lp-ugettext>
 
       <script>
-      var uget = document.querySelector('lp-ugettext');
-      var mylanguage = document.querySelector('#mylanguage');
-      mylanguage.innerHTML = uget.language;
+        window.addEventListener('polymer-ready', function(e) {
+          var uget = document.querySelector('lp-ugettext');
+          var mylanguage = document.querySelector('#mylanguage');
+          mylanguage.innerHTML = uget.language;
+        });
       </script>
 
 </body>
