--- a/lp-ugettext.html
+++ b/lp-ugettext.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 
 <!--
 lp-ugettext provides the language from browser via javascript
